# sizzle

./: .gitignore  .valgrindrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/sizzle-core/: Cargo.toml
crates/sizzle-core/src/: files.rs  git.rs  kanban.rs  lib.rs  metadata.rs  scanner.rs
crates/sizzle-gtk/: Cargo.toml
crates/sizzle-gtk/src/: kanban.rs  lib.rs  main.rs  markdown.rs  terminal.rs
features/: app-title.md  file-explorer.md  kanban-board.md  left-pane.md  markdown.md  settings-modal.md  support-fish.md  terminal.md  ui.md
scripts/: check-invoke.cjs  dev.mjs  rebuild-pty.cjs  valgrind.sh
src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: api_manifest.rs  claude.rs  files.rs  git.rs  metadata.rs  mod.rs  projects.rs  pty.rs  scanner.rs
src/main/: appReload.ts  index.ts  paths.ts
src/main/ipc/: pty.ts  (+6 more)
src/preload/: index.ts
src/pty-host/: index.ts
src/renderer/: ApiMismatchBanner.tsx  App.tsx  api.ts  diffManifests.ts  global.d.ts  index.html  styles.css  turndown-plugin-gfm.d.ts  virtual-api-manifest.d.ts
src/shared/: api-definitions.ts  api-manifest.ts  manifest-data.ts  reload.ts
term-proto/: Cargo.toml
term-proto/src/: main.rs
(+26 files in other folders)
