[package]
name = "sizzle-gtk"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sizzle-gtk"
path = "src/main.rs"

[dependencies]
sizzle-core = { path = "../sizzle-core" }
gtk4 = { version = "0.9", features = ["v4_10"] }
pangocairo = "0.20"
alacritty_terminal = "0.26"
log = "0.4"
env_logger = "0.11"
pulldown-cmark = "0.12"
